@@ -3414,6 +3414,13 @@ build
     on fopen. (Only if CONFIG_NFILE_STREAMS > 0)
   </li>
   <li>
+    <code>CONFIG_STDIO_LINEBUFFER</code>:
+    If standard C buffered I/O is enabled (<code>CONFIG_STDIO_BUFFER_SIZE</code> > 0),
+    then this option may be added to force automatic, line-oriented flushing the output buffer
+    for <code>printf()</code> >, <code>fprintf()</code> >, and <code>vfprintf()</code> >.
+    When a newline character is encountered in the format string, the output buffer will be flushed.
+    This (slightly) increases the NuttX footprint but supports the kind of behavior that people expect for printf.
+  <li>
     <code>CONFIG_NUNGET_CHARS</code>: Number of characters that can be
     buffered by ungetc() (Only if CONFIG_NFILE_STREAMS > 0)
   </li>
